nginx/svc-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    name: svc-nginx
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: nginx
