nginx/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: nginx-ingress
spec:
  tls:
    - secretName: nginx-demo-com-tls
      hosts:
        - "nginx-demo.com"
  rules:
    - host: nginx-demo.com
      http: 
        paths: 
          - path: /
            pathType: Prefix 
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
